@@ -1,7 +1,9 @@
 2011-04-26  Romain Francois  <romain@r-enthusiasts.com>
 
     * inst/include/Rcpp/sugar/functions/mean.h: new sugar function: mean
-
+    
+    * inst/include/Rcpp/sugar/functions/var.h: new sugar function: var
+    
 2011-04-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: New example setting row and column
